--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,7 +29,8 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   shared_preferences: ^0.5.3+4
   cached_network_image: ^1.1.1
-  # shared: ^0.6.2+1
+  share: ^0.6.2+1
+  
 
 dev_dependencies:
   flutter_test:
